<resources>
    <string name="app_name">Breaking News</string>


    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_page_label">Page</string>
    <string name="settings_page_key" translatable="false">Article max</string>
    <string name="settings_page_default" translatable="false">10</string>

    <string name="settings_interest_label">Which keyword you want to search</string>
    <string name="settings_interest_key" translatable="false">what are you interested in?</string>
    <string name="settings_interest_default" translatable="false">apple</string>

    <string name="no_news_found">No News Found</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="received_date_and_time_format">yyyy-MM-dd\'T\'HH:mm:ss\'Z\'</string>
    <string name="displayed_date_format">LLL dd, yyy</string>
    <string name="displayed_time_format">h:mm a</string>

    <string name="method_GET">GET</string>
    <string name="utf_8">UTF-8</string>

    <string name="response_object">response</string>
    <string name="results_array">results</string>
    <string name="title">webTitle</string>
    <string name="section_name">sectionName</string>
    <string name="web_publication_date_and_time">webPublicationDate</string>
    <string name="web_url">webUrl</string>
    <string name="fields_object">fields</string>
    <string name="tags_array">tags</string>
    <string name="web_title_in_tags_array">webTitle</string>

    <string name="http_request_error_message">Problem making the HTTP request</string>
    <string name="problem_building_url">Problem building the URL</string>
    <string name="problem_retrieving_json_result">Problem retrieving the news JSON results.</string>
    <string name="error_response_code_message">Error response code:</string>
    <string name="problem_parsing_news_json_result">Problem parsing the news JSON results</string>
    <string name="problem_passing_date_and_time">Problem in parsing Date or Time</string>

    <string name="title_placeholder">Reliance Jio Diwali Dhamaka</string>
    <string name="section_placeholder">Technology</string>
    <string name="time_placeholder">2:10 PM</string>
    <string name="date_placeholder">July 2, 2015</string>
    <string name="author_placeholder">Author 1, Author 2, Author 3</string>

    <string name="no_title_found">no Title</string>
    <string name="no_section_found">no Section </string>
    <string name="no_time_found">no Time </string>
    <string name="no_author_found">no Author</string>
    <string name="no_date_found">no Date </string>
</resources>
