<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black"
        tools:text="@string/title_placeholder" />

    <TextView
        android:id="@+id/section"
        style="@style/dateandtime"
        android:layout_below="@id/title"
        tools:text="@string/section_placeholder" />

    <TextView
        android:id="@+id/time"
        style="@style/dateandtime"
        android:layout_below="@id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        tools:text="@string/time_placeholder" />

    <TextView
        android:id="@+id/date"
        style="@style/dateandtime"
        android:layout_below="@id/time"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        tools:text="@string/date_placeholder" />

    <TextView
        android:id="@+id/authors"
        style="@style/dateandtime"
        android:layout_below="@id/date"
        android:layout_alignParentEnd="true"
        tools:text="@string/author_placeholder" />
</RelativeLayout>